--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,6 @@
     <h1>Media Watch List</h1>
     <p>Keeping track of the media I want to watch.</p>
   </header>
-
-  <app-watch-item [mediaItem]="firstMediaItem"></app-watch-item>
 </section>
+<app-media-item-list></app-media-item-list>
 <router-outlet></router-outlet>
