--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
     <p>Keeping track of the media I want to watch.</p>
   </header>
 </section>
+<app-media-item-form></app-media-item-form>
 <app-media-item-list></app-media-item-list>
 <router-outlet></router-outlet>
